--- a/style.css
+++ b/style.css
@@ -1,13 +1,56 @@
 header {
-    color: white;
     background-color: black;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 10px 0;
-    text-align: center;
     z-index: 1000;
 }
+
+h1 {
+    display: inline block;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+nav li a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+nav li a:hover {
+    color: pink;
+    
+}
+
+h2 {
+    font-style: italic;
+    color: pink;
+    text-decoration: underline;
+
+}
+
+p {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+
+
