--- a/style.css
+++ b/style.css
@@ -51,6 +51,29 @@ p {
     text-align: center;
 }
 
+#projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+#projects li {
+    list-style: none;
+    text-align: center;
+}
+
+#projects li a {
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+
+#projects li a:hover {
+    color: rgb(255, 192, 241);
+}
+
 #darkModeButton {
     background-color: black;
     color: pink;
@@ -60,6 +83,75 @@ p {
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
 }
+
+@media only screen and (min-width: 1024px) {
+    body {
+        font-size: 16px;
+    }
+    main {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    h1 {
+        font-size: 28px;
+    }
+    nav li {
+        margin-right: 30px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    body {
+        font-size: 16px;
+    }
+    main {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+}
+
+@media only screen and (max-width: 479px) {
+    body {
+        font-size: 12px;
+    }
+    main {
+        max-width: 300px;
+        margin: 0 auto;
+    }
+    header {
+        padding: 10px 0;
+    }
+    h1 {
+        font-size: 20px;
+    }
+    nav li {
+        margin-right: 15px;
+    }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    body {
+        font-size: 12px;
+    }
+    main {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    h1 {
+        font-size: 18px;
+    }
+    nav {
+        text-align: center;
+    }
+    nav li {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+}
+
+
 
 
 
